fixed z-index

--- a/frontend/src/components/List.css
+++ b/frontend/src/components/List.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 1.5rem;
   position: absolute;
-  z-index: 1001;
+  z-index: 1;
   width: 100%;
   height: 100vh;
   background-color: #1a1a1d51;
