--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -13,7 +13,7 @@ body {
   background-color: #ffc857;
   display: flex;
   overflow-x: auto;
-  z-index: 1005;
+  z-index: 2;
 }
 
 .nav__link {
