--- a/frontend/src/components/SwitchMapListFilter.css
+++ b/frontend/src/components/SwitchMapListFilter.css
@@ -3,9 +3,10 @@
   overflow: hidden;
   border-radius: 15px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
-  z-index: 1005;
+  z-index: 2;
   position: absolute;
-  left: 29%;
+  margin-left: auto;
+  margin-right: auto;
   top: 10%;
 }
 
