--- a/frontend/src/pages/Infos.css
+++ b/frontend/src/pages/Infos.css
@@ -82,7 +82,7 @@ html,
   font-size: 2rem;
   top: 0px;
   right: 20px;
-  z-index: 1000;
+  z-index: 1;
   cursor: pointer;
 }
 
